edition = "2023";

option go_package = "keeper/internal/proto/v1/model";

package keeper.go.grpc.v1.model;
import "google/protobuf/go_features.proto";
option features.(pb.go).api_level = API_OPAQUE;

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
}