edition = "2023";

option go_package = "keeper/internal/proto/v1/model";

package keeper.go.grpc.v1.model;

message RegisterRequest {
  string login = 1;
  string password = 2;
}